Fix overpadding of fixie nav on mobile

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -33,7 +33,11 @@
     top: 40px;
     width: 100%;
     padding-top: 20px;
+    padding-bottom: 20px;
     border-bottom: 1px solid #e8e8e8;
+    @media (max-width: 545px){
+      padding-bottom: 0px;
+    }
   }
 
   nav ul{
